--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.1",
+    "keen-slider": "^6.8.5",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
     "prettier": "^2.8.8",
