--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -19,16 +19,22 @@
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.1",
     "keen-slider": "^6.8.5",
+    "ky": "^0.33.3",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/react-slick": "^0.23.10",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
