--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
