--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/node-notifier": "^8.0.2",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
+    "node-notifier": "^10.0.1",
     "zod": "^3.21.4",
     "zod-error": "^1.5.0"
   },
